--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,10 @@
     background-color: rgba(220, 220, 220, 0.25) !important; 
     box-shadow: inset 0 0 0 200px rgba(239, 239, 239, 0.08) !important; */
 }
+.css-168noda{
+   background-color: white !important;
+   box-shadow:none !important;
+}
 
 .css-1191obr-MuiPaper-root-MuiAppBar-root{
     background-color: #fff !important;
