--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,9 @@
    background-color: white !important;
    box-shadow:none !important;
 }
+.logo{
+   background:white !important;
+}
 
 .css-1191obr-MuiPaper-root-MuiAppBar-root{
     background-color: #fff !important;
