--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,9 @@
    background-color: white !important;
    box-shadow:none !important;
 }
+.bgcolor{
+   color: #0d6efd !important;
+}
 .logo{
    background:white !important;
 }
