--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,9 @@
    background-color: white !important;
    box-shadow:none !important;
 }
+.MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-i6s8oy{
+   background-color: white !important;
+}
 .menuIcon,button.MuiButtonBase-root.MuiIconButton-root.MuiIconButton-colorInherit.MuiIconButton-edgeStart.MuiIconButton-sizeMedium.css-q6oun{
    color:grey !important;
 }
