--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@
     background-color: rgba(220, 220, 220, 0.25) !important; 
     box-shadow: inset 0 0 0 200px rgba(239, 239, 239, 0.08) !important; */
 }
-.MuiPaper-root.MuiMenu-paper.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation0.MuiPopover-paper.css-1wv7ivo{
+.MuiPaper-root.MuiMenu-paper.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation0.MuiPopover-paper.css-1wv7ivo,.MuiPaper-root.MuiMenu-paper.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation0.MuiPopover-paper.css-1wv7ivo{
    margin-left:87% !important;
    margin-top:45px !important;
 }
